# RealEngineRust

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
real_engine/: Cargo.toml
real_engine/src/: lib.rs  window.rs
real_engine/src/core/: application.rs  assert.rs  entry_point.rs  log.rs  window.rs
real_engine/src/platform/windows/: windows_window.rs
