[workspace]
members = ["app"]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Andrew DeFord"]
description = "A rebuild of my game C++ real_engine game engine in rust."
edition = "2021"

[workspace.dependencies]
real_engine = { path = "real_engine" }
glfw = "0.55.0"
spdlog-rs = "0.3.13"

[profile.dev]
opt-level = 0
debug = true
strip = false
panic = 'unwind'
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
strip = true
panic = 'unwind'
codegen-units = 16